--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <marquee>recuerdos de 19/06/2024</marquee>
-    <h1>✨Te amo mil billions mi estrellita anel✨</h1>
+    <h1>✨Te amo mil millones mi estrellita anel✨</h1>
     <div id="gif-container">
         <center>
           <h2>¿Quieres ser mi novia?</h2>
@@ -62,9 +62,9 @@
         noButton.addEventListener('click', () => {
             respuestaDiv.innerHTML = `
                 <p>¿Estás segura?</p>
-                <center>
-                  <img src="https://media.tenor.com/P3RqQUUK9BAAAAAM/rip-juice-cry.gif" width="100" height="100">
-                </center>
+        <center>
+          <img src="https://media.tenor.com/P3RqQUUK9BAAAAAM/rip-juice-cry.gif" width="100" height="100">
+        </center>
                 <button id="si-segura">Sí</button>
                 <button id="no-segura">No</button>
             `;
@@ -78,4 +78,30 @@
 
             noSeguraButton.addEventListener('click', () => {
                 respuestaDiv.innerHTML = `
-                    <p>¡Ay, caramba! Me lastimaste el
+                    <p>¿Estás segura?</p>
+                    <button id="si-segura">Sí</button>
+                    <button id="no-segura">No</button>
+                `;
+                while (true) {
+                    const respuesta = prompt('¿Estás segura?');
+                    if (respuesta === 'no') {
+                        break;
+                    }
+                }
+                respuestaDiv.innerHTML = `
+                    <p>esta bien te dare otra oportunidad de pensarlo, yo sabia que me amabas corazon, para que dijeras que no, siempre confie en ti</p>
+                    <p>picale al boton de volver mi vida<p>
+                        <center>
+          <img src="https://i.pinimg.com/originals/49/84/ce/4984ce4f416747e312d01273d8756657.gif" width="100" height="100">
+        </center>
+                    <button id="volver">Volver</button>
+                `;
+                const volverButton = document.getElementById('volver');
+                volverButton.addEventListener('click', () => {
+                    location.reload();
+                });
+            });
+        });
+    </script>
+</body>
+</html>
